# GS

./: .dockerignore  .env_vercel  .eslintrc.json  .gitignore  Dockerfile.dev  Lista de equipamentos.md  Makefile  README.md  assinatura-empresa-digital.md  components.json  drizzle.config.ts  events-content  gs-propostas-reorganization.md  next.config.js  npx  package-lock.json  package.json  tailwind.config.ts  temp2.txt  temp3.tsx  tmp_equipment.json  tsconfig.json
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 25d3ced2f0c7_init_schema.py  69873882579e_add_proposal_history.py  a1b2c3d4e5f6_add_event_start_end_dates_and_status.py  b1c2d3e4f5g6_add_quantity_unit_value_to_equipment.py  b2be72025581_merge_heads.py  b7c8d9e0f1a2_add_quantity_and_unit_value_cents.py  c0d1e2f3g4h5_add_event_equipment_quantity.py  d1e2f3g4h5i6_add_company_signature.py  e4f5a6b7c8d9_add_proposal_id_to_signatures.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  crm.py  enums.py  intranet.py  inventory.py
backend/app/schemas/: __init__.py  catalog.py  crm.py  documents.py  intranet.py  inventory.py  proposals.py
backend/app/services/: DOCUMENTS_README.md  pdf_generator.py  (+1 more)
backend/gsproducao_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: seed_equipment.py  seed_equipment_full.py  update_equipment_locations.py
(+627 files in other folders)
