[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsproducao-backend"
version = "0.1.0"
description = "FastAPI backend for GS Producao intranet"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "SQLAlchemy>=2.0.30,<3.0",
    "alembic>=1.13.1,<2.0",
    "psycopg[binary]>=3.2.1,<4.0",
    "pydantic>=2.6.4,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "python-dotenv>=1.0.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.6,<0.24",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
app = "app.main:app"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 9000
reload = true
